fixup print popup to not cut off pages - fix for #115337015

--- a/app/css/print.scss
+++ b/app/css/print.scss
@@ -5,6 +5,13 @@
 }
 
 @media print {
+    @page {
+        margin-top: 2cm;
+        margin-bottom: 2cm;
+        margin-right: 2cm;
+        margin-left: 2cm;
+    }
+
     #app {
         visibility: hidden;
     }
